--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- homepage everything runs from the root DOM here-->
     <div id="root"></div>
     <!--
       This HTML file is a template.
